<resources>
    <string name="app_name">Chariot</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="email_invalid">Invalid email, please check the email address</string>
    <string name="login_fail">Invalid user name or password. Please try again</string>
    <string name="no_network_title">No network!</string>
    <string name="no_network_msg">You are not connected to internet. Please connect to internet and try again</string>
    <string name="text_ok">OK</string>
    <string name="name">Your name</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="required_fields">All fields are required</string>
    <string name="passwd_mismatch">Passwords do not match</string>
    <string name="title_logout">Logout</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logout_conf">Logout?</string>
    <string name="logout_msg">Are you sure to logout?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="no_permission">Not enough permission. Please grant location permission</string>
    <string name="settings">Settings</string>
    <string name="permission_needed">Permissions Required</string>
    <string name="appr_time">Approximate pick up time : %1$s </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_unable_to_book">Unable to book</string>
    <string name="msg_unable_to_book">Something went wrong while trying to book. Please rety</string>
    <string name="driver_approching">Taxi is on its way to pick you up!</string>
    <string name="driver_dst">You are on your way to destination</string>
    <string name="driver_arrived">Driver Arrived</string>
    <string name="driver_arrived_msg">Driver has arrived. Please find him</string>
    <string name="dst_arrived">You have reached</string>
    <string name="dst_arrived_msg">Thank for riding with us. Do NOT forget to pay. And visit us again</string>
    <string name="rate_cst">You have arrived. Please rate customer</string>
    <string name="home">Home</string>
    <string name="history">History</string>

    <string name="facebook_app_id">812609065512328</string>
</resources>
