<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.xc0ffeelabs.taxicab.fragments.FBSignUpFragment"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/black"
        android:title="Verify your details"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegistrationActivity"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="33dp"
        android:id="@+id/relativeLayout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="23dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:ems="10"
                android:id="@+id/user_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_number_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_text_input_layout"
            android:layout_alignLeft="@+id/username_text_input_layout"
            android:layout_alignStart="@+id/username_text_input_layout"
            android:layout_alignRight="@+id/username_text_input_layout"
            android:layout_alignEnd="@+id/username_text_input_layout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/user_phone"
                android:hint="@string/phone_number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_number_text_input_layout"
            android:layout_alignLeft="@+id/phone_number_text_input_layout"
            android:layout_alignStart="@+id/phone_number_text_input_layout"
            android:layout_alignRight="@+id/phone_number_text_input_layout"
            android:layout_alignEnd="@id/phone_number_text_input_layout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/email_address"
                android:id="@+id/user_email"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create account"
            android:id="@+id/btn_signup"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/email_text_input_layout"
            android:layout_alignStart="@+id/email_text_input_layout"
            android:layout_alignRight="@+id/email_text_input_layout"
            android:layout_alignEnd="@+id/email_text_input_layout"
            android:layout_below="@id/email_text_input_layout"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

</RelativeLayout>
