<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up with your social accounts:"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_social_signup"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_fb_login_btn"
        android:id="@+id/fb_login"
        android:layout_below="@+id/tv_social_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fb_login"
        android:id="@+id/ll_or"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:text="OR"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up with your email:"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_below="@+id/ll_or"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_email_signup"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_email_signup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="33dp"
        android:id="@+id/relativeLayout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="23dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:ems="10"
                android:id="@+id/user_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_number_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_text_input_layout"
            android:layout_alignLeft="@+id/username_text_input_layout"
            android:layout_alignStart="@+id/username_text_input_layout"
            android:layout_alignRight="@+id/username_text_input_layout"
            android:layout_alignEnd="@+id/username_text_input_layout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/user_phone"
                android:hint="@string/phone_number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_number_text_input_layout"
            android:layout_alignLeft="@+id/phone_number_text_input_layout"
            android:layout_alignStart="@+id/phone_number_text_input_layout"
            android:layout_alignRight="@+id/phone_number_text_input_layout"
            android:layout_alignEnd="@id/phone_number_text_input_layout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/email_address"
                android:id="@+id/user_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_text_input_layout"
            android:layout_alignLeft="@+id/email_text_input_layout"
            android:layout_alignStart="@+id/email_text_input_layout"
            android:layout_alignRight="@+id/email_text_input_layout"
            android:layout_alignEnd="@+id/email_text_input_layout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/password"
                android:id="@+id/user_passwd"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create account"
            android:id="@+id/btn_signup"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/password_text_input_layout"
            android:layout_alignStart="@+id/password_text_input_layout"
            android:layout_alignRight="@+id/password_text_input_layout"
            android:layout_alignEnd="@+id/password_text_input_layout"
            android:layout_below="@id/password_text_input_layout"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <include layout="@layout/progress_bar"
        android:id="@+id/pb_loading"
        android:visibility="gone"/>

</RelativeLayout>